# Quartus-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: claude_code.mcp.example.json  claude_desktop_config.example.json  codex.config.example.toml  create_counter_project.json
src/quartus_mcp/: __init__.py  quartus_cli.py  server.py  templates.py
